# gn-ninja-googletest-hello_world

./: .gitignore  BUILD.gn  LICENSE  README.md  clang-format-all.sh  client_main.cc
src/hello_world/: BUILD.gn  hello_world.cc  hello_world.h  hello_world_unittest.cc
